--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 # After changing this file, check it on:
 #   http://lint.travis-ci.org/
 language: python
+sudo: false
 python:
   - 3.3
   - 2.7
+cache:
+  directories:
+    - $HOME/.cache/pip
 before_install:
   - pip install --upgrade pip setuptools  # Upgrade pip and setuptools to get ones with `wheel` support
-  - pip install --find-links http://wheels.astropy.org/ --find-links http://wheels2.astropy.org/ --use-wheel --use-mirrors nose numpy matplotlib Sphinx
+  - pip install --find-links http://wheels.astropy.org/ --find-links http://wheels2.astropy.org/ --trusted-host wheels.astropy.org --trusted-host wheels2.astropy.org --use-wheel nose numpy matplotlib Sphinx
 script:
   - python setup.py test
