--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,16 @@
 language: python
 sudo: false
 python:
-  - 3.3
+  - 3.5
   - 2.7
+env:
+  - SPHINX_SPEC="Sphinx==1.2.3"
+  - SPHINX_SPEC="Sphinx"
 cache:
   directories:
     - $HOME/.cache/pip
 before_install:
   - pip install --upgrade pip setuptools  # Upgrade pip and setuptools to get ones with `wheel` support
-  - pip install --find-links http://wheels.astropy.org/ --find-links http://wheels2.astropy.org/ --trusted-host wheels.astropy.org --trusted-host wheels2.astropy.org --use-wheel nose numpy matplotlib Sphinx
+  - pip install --find-links http://wheels.astropy.org/ --find-links http://wheels2.astropy.org/ --trusted-host wheels.astropy.org --trusted-host wheels2.astropy.org --use-wheel nose numpy matplotlib ${SPHINX_SPEC}
 script:
   - python setup.py test
