REL: use the distutils sdist command instead of the setuptools one.
This removed some unwanted useless files like an empty setup.cfg

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,8 @@
+include MANIFEST.in
 recursive-include numpydoc/tests *.py
 include *.txt
+include *.rst
+
+# Exclude what we don't want to include
+prune */__pycache__
+global-exclude *.pyc *~ *.bak *.swp *.pyo
