--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,8 @@ before_install:
   - pip install --upgrade pip setuptools  # Upgrade pip and setuptools to get ones with `wheel` support
   - pip install --find-links http://wheels.astropy.org/ --find-links http://wheels2.astropy.org/ --trusted-host wheels.astropy.org --trusted-host wheels2.astropy.org --use-wheel nose numpy matplotlib ${SPHINX_SPEC}
 script:
-  - python setup.py test
+  - |
+    python setup.py sdist
+    cd dist
+    pip install numpydoc* -v
+  - nosetests numpydoc
