Require that sphinx issue no warnings in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ script:
   - nosetests numpydoc
   - |
     cd ../doc
-    make html
-    make latexpdf
+    make SPHINXOPTS='-W' html
+    make SPHINXOPTS='-W' latexpdf
