--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,13 @@ cache:
 before_install:
   - sudo apt-get install texlive texlive-latex-extra latexmk
   - pip install --upgrade pip setuptools  # Upgrade pip and setuptools to get ones with `wheel` support
-  - pip install nose numpy matplotlib ${SPHINX_SPEC}
+  - pip install pytest numpy matplotlib ${SPHINX_SPEC}
 script:
   - |
     python setup.py sdist
     cd dist
     pip install numpydoc* -v
-  - nosetests numpydoc
+  - pytest --pyargs numpydoc
   - |
     cd ../doc
     make SPHINXOPTS=$SPHINXOPTS html
