--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,5 @@ addopts =
     --showlocals --doctest-modules -ra --cov-report= --cov=numpydoc
     --junit-xml=junit-results.xml --ignore=doc/conf.py
 filterwarnings =
+    ignore:'U' mode is deprecated:DeprecationWarning
     ignore:Using or importing the ABCs.*:DeprecationWarning
-
