--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ addons:
   apt:
     packages:
     - dvipng
+    - texlive
+    - texlive-latex-extra
+    - latexmk
 matrix:
   include:
     - python: 3.7
@@ -16,16 +19,15 @@ matrix:
 cache:
   directories:
     - $HOME/.cache/pip
-before_install:
-  - sudo apt-get install texlive texlive-latex-extra latexmk
+install:
   - pip install --upgrade pip setuptools  # Upgrade pip and setuptools to get ones with `wheel` support
-  - pip install pytest pytest-cov pytest-sugar numpy matplotlib sphinx${SPHINX_SPEC} codecov
+  - pip install pytest pytest-cov numpy matplotlib sphinx${SPHINX_SPEC} codecov
 script:
   - |
     python setup.py sdist
     cd dist
     pip install numpydoc* -v
-  - pytest --pyargs numpydoc
+  - pytest -v --pyargs numpydoc
   - |
     cd ../doc
     make SPHINXOPTS=$SPHINXOPTS html
