Fixing travis negation of exit status

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ script:
   - pytest -v --pyargs numpydoc
   # Making sure the command line options work
   - python -m numpydoc numpydoc.tests.test_main._capture_stdout
-  - ! python -m numpydoc numpydoc.tests.test_main._invalid_docstring
+  - echo '! python -m numpydoc numpydoc.tests.test_main._invalid_docstring' | bash
   - python -m numpydoc --validate numpydoc.tests.test_main._capture_stdout
-  - ! python -m numpydoc --validate numpydoc.tests.test_main._docstring_with_errors
+  - echo '! python -m numpydoc --validate numpydoc.tests.test_main._docstring_with_errors' | bash
   # Build documentation
   - |
     cd ../doc
