TST: Add inherited method

--- a/numpydoc/tests/tinybuild/Makefile
+++ b/numpydoc/tests/tinybuild/Makefile
@@ -5,7 +5,7 @@ clean:
 	rm -rf generated/
 
 html:
-	sphinx-build -b html -d _build/doctrees . _build/html
+	sphinx-build -nWT --keep-going -b html -d _build/doctrees . _build/html
 
 show:
 	@python -c "import webbrowser; webbrowser.open_new_tab('file://$(PWD)/_build/html/index.html')"
