--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,8 @@
 addopts =
     --showlocals --doctest-modules -ra --cov-report= --cov=numpydoc
     --junit-xml=junit-results.xml --ignore=doc/conf.py
+junit_family = xunit2
 filterwarnings =
     ignore:'U' mode is deprecated:DeprecationWarning
+    ignore:.*sphinx\.util\.smartypants is deprecated.*:
     ignore:Using or importing the ABCs.*:DeprecationWarning
