--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,13 @@ include MANIFEST.in
 recursive-include numpydoc *
 include *.txt
 include *.rst
+recursive-include doc *
 
 # Exclude what we don't want to include
 prune */__pycache__
+exclude .circleci/config.yml
+exclude .coveragerc
+exclude codecov.yml
+exclude doc/scipy-sphinx-theme/.git
+exclude .gitmodules
 global-exclude *.pyc *~ *.bak *.swp *.pyo
