MAINT: pytest ignore doc directory.
Update pytest config to ignore entire doc/ directory. This prevents
an import name collision in doc/scipy-sphinx-theme/conf.py.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [tool:pytest]
 addopts =
     --showlocals --doctest-modules -ra --cov-report= --cov=numpydoc
-    --junit-xml=junit-results.xml --ignore=doc/conf.py
+    --junit-xml=junit-results.xml --ignore=doc/
 junit_family = xunit2
 filterwarnings =
     ignore:'U' mode is deprecated:DeprecationWarning
