--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip wheel setuptools
         python -m pip install -r test_requirements.txt -r doc/requirements.txt
+        python -m pip install codecov
         python -m pip install ${{ matrix.sphinx-version }}
         python -m pip install .
         pip list
@@ -38,6 +39,10 @@ jobs:
     - name: Run test suite
       run: |
         pytest -v --pyargs numpydoc
+
+    - name: Test coverage
+      run: |
+        codecov
 
     - name: Make sure CLI works
       run: |
