--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
 
     - name: Run test suite
       run: |
-        pytest -v --pyargs numpydoc
+        pytest -v --pyargs .
 
     - name: Test coverage
       run: |
@@ -59,5 +59,5 @@ jobs:
 
     - name: Build documentation
       run: |
-        make -C doc html SPHINXOPTS="-nWT"
-        make -C doc latexpdf SPHINXOPTS="-nWT"
+        make -C doc html SPHINXOPTS="-nT"
+        make -C doc latexpdf SPHINXOPTS="-nT"
