--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,3 +63,45 @@ jobs:
         run: |
           make -C doc html SPHINXOPTS="-nT"
           make -C doc latexpdf SPHINXOPTS="-nT"
+
+  base:
+    runs-on: ${{ matrix.os }}-latest
+    strategy:
+      matrix:
+        os: [ubuntu, macos, windows]
+        python-version: ["3.11-dev"]
+        sphinx-version: ["sphinx==4.0", "sphinx==4.5"]
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Python setup
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Setup environment
+        run: |
+          python -m pip install --upgrade pip wheel setuptools
+          python -m pip install pytest pytest-cov
+          python -m pip install ${{ matrix.sphinx-version }}
+          python -m pip list
+
+      - name: Downgrade Jinja2 for sphinx<4
+        if: ${{ matrix.sphinx-version }} == 'sphinx<4.0.2'
+        run: python -m pip install jinja2==3.0.3 markupsafe==2.0.1 pydata-sphinx-theme==0.8.0
+
+      - name: Install
+        run: |
+          python -m pip install .
+          pip list
+
+      - name: Run test suite
+        run: |
+          pytest -v --pyargs numpydoc
+
+      - name: Make sure CLI works
+        run: |
+          python -m numpydoc numpydoc.tests.test_main._capture_stdout
+          echo '! python -m numpydoc numpydoc.tests.test_main._invalid_docstring' | bash
+          python -m numpydoc --validate numpydoc.tests.test_main._capture_stdout
+          echo '! python -m numpydoc --validate numpydoc.tests.test_main._docstring_with_errors' | bash
