--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,15 +24,19 @@ jobs:
 
       - name: Setup environment
         run: |
-          python -m venv venv
-          source venv/bin/activate
-
-      - name: Install
-        run: |
           python -m pip install --upgrade pip wheel setuptools
           python -m pip install -r requirements/test.txt -r doc/requirements.txt
           python -m pip install codecov
           python -m pip install ${{ matrix.sphinx-version }}
+          python -m pip list
+
+      - name: Downgrade Jinja2 for sphinx<4
+        if: (${{ matrix.sphinx-version }} == 'sphinx==1.8.0') ||
+          (${{ matrix.sphinx-version }} == 'sphinx==2.1')
+        run: python -m pip install jinja2==3.0.3
+
+      - name: Install
+        run: |
           python -m pip install .
           pip list
 
