--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os: [Ubuntu]
         python-version: ["3.7", "3.8", "3.9", "3.10"]
-        sphinx-version: ["sphinx==1.8.0", "sphinx==2.1", "sphinx>3.0"]
+        sphinx-version: ["sphinx==3.0", "sphinx==4.0", "sphinx>4.4"]
     steps:
       - uses: actions/checkout@v2
 
@@ -31,8 +31,7 @@ jobs:
           python -m pip list
 
       - name: Downgrade Jinja2 for sphinx<4
-        if: (${{ matrix.sphinx-version }} == 'sphinx==1.8.0') ||
-          (${{ matrix.sphinx-version }} == 'sphinx==2.1')
+        if: ${{ matrix.sphinx-version }} == 'sphinx<4.0.2'
         run: python -m pip install jinja2==3.0.3
 
       - name: Install
