--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,8 @@ jobs:
       matrix:
         os: [Ubuntu]
         python-version: ["3.7", "3.8", "3.9", "3.10"]
-        sphinx-version: ["sphinx==3.0", "sphinx==4.0", "sphinx>4.4"]
+        sphinx-version:
+          ["sphinx==3.0", "sphinx==4.0", "sphinx>4.4", "sphinx==5.0.0b1"]
     steps:
       - uses: actions/checkout@v2
 
