--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,11 @@ repos:
         files: \.(html|md|yml|yaml)
         args: [--prose-wrap=preserve]
 
+  - repo: https://github.com/asottile/blacken-docs
+    rev: v1.12.1
+    hooks:
+      - id: blacken-docs
+
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.32.1
     hooks:
