--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [Ubuntu]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10"]
         sphinx-version: ["sphinx==3.0", "sphinx==4.0", "sphinx>4.4"]
     steps:
       - uses: actions/checkout@v2
