--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,8 @@ jobs:
       matrix:
         os: [Ubuntu]
         python-version: ["3.7", "3.8", "3.9", "3.10"]
-        sphinx-version: ["sphinx==3.0", "sphinx==4.0", "sphinx>4.4"]
+        sphinx-version:
+          ["sphinx==4.0.2", "sphinx==4.5", "sphinx==5.0", "sphinx>=5.0"]
     steps:
       - uses: actions/checkout@v3
 
@@ -29,10 +30,6 @@ jobs:
           python -m pip install codecov
           python -m pip install ${{ matrix.sphinx-version }}
           python -m pip list
-
-      - name: Downgrade Jinja2 for sphinx<4
-        if: ${{ matrix.sphinx-version }} == 'sphinx<4.0.2'
-        run: python -m pip install jinja2==3.0.3 markupsafe==2.0.1 pydata-sphinx-theme==0.8.0
 
       - name: Install
         run: |
@@ -70,7 +67,8 @@ jobs:
       matrix:
         os: [ubuntu, macos, windows]
         python-version: ["3.11-dev"]
-        sphinx-version: ["sphinx==4.0", "sphinx==4.5"]
+        sphinx-version:
+          ["sphinx==4.0.2", "sphinx==4.5", "sphinx==5.0", "sphinx>=5.0"]
     steps:
       - uses: actions/checkout@v3
 
@@ -85,10 +83,6 @@ jobs:
           python -m pip install pytest pytest-cov
           python -m pip install ${{ matrix.sphinx-version }}
           python -m pip list
-
-      - name: Downgrade Jinja2 for sphinx<4
-        if: ${{ matrix.sphinx-version }} == 'sphinx<4.0.2'
-        run: python -m pip install jinja2==3.0.3 markupsafe==2.0.1 pydata-sphinx-theme==0.8.0
 
       - name: Install
         run: |
