--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,13 @@ jobs:
         os: [Ubuntu]
         python-version: ["3.7", "3.8", "3.9", "3.10"]
         sphinx-version:
-          ["sphinx==4.0.3", "sphinx==4.5", "sphinx==5.0", "sphinx>=5.0"]
+          ["sphinx==4.0.2", "sphinx==4.5", "sphinx==5.0", "sphinx>=5.0"]
+        exclude:
+          - python-version: "3.10"
+            sphinx-version: "sphinx==4.0.2"
+        include:
+          - python-version: "3.10"
+            sphinx-version: "sphinx==4.2"
     steps:
       - uses: actions/checkout@v3
 
@@ -68,7 +74,7 @@ jobs:
         os: [ubuntu, macos, windows]
         python-version: ["3.11-dev"]
         sphinx-version:
-          ["sphinx==4.0.3", "sphinx==4.5", "sphinx==5.0", "sphinx>=5.0"]
+          ["sphinx==4.2", "sphinx==4.5", "sphinx==5.0", "sphinx>=5.0"]
     steps:
       - uses: actions/checkout@v3
 
