--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,72 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [Ubuntu]
-        python-version: ["3.7", "3.8", "3.9"]
-        sphinx-version:
-          [
-            "sphinx==3.0",
-            "sphinx==3.5",
-            "sphinx==4.0",
-            "sphinx==4.5",
-            "sphinx==5.0",
-            "sphinx>=5.0",
-          ]
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Python setup
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Setup environment
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-          python -m pip install -r requirements/test.txt -r doc/requirements.txt
-          python -m pip install codecov
-          python -m pip install ${{ matrix.sphinx-version }}
-          python -m pip list
-
-      - name: Downgrade Jinja2 for sphinx<4
-        if: ${{ matrix.sphinx-version }} == 'sphinx<4.0.2'
-        run: python -m pip install jinja2==3.0.3 markupsafe==2.0.1 pydata-sphinx-theme==0.8.0 docutils==0.17.1
-
-      - name: Install
-        run: |
-          python -m pip install .
-          pip list
-
-      - name: Run test suite
-        run: |
-          pytest -v --pyargs .
-
-      - name: Test coverage
-        run: |
-          codecov
-
-      - name: Make sure CLI works
-        run: |
-          python -m numpydoc numpydoc.tests.test_main._capture_stdout
-          echo '! python -m numpydoc numpydoc.tests.test_main._invalid_docstring' | bash
-          python -m numpydoc --validate numpydoc.tests.test_main._capture_stdout
-          echo '! python -m numpydoc --validate numpydoc.tests.test_main._docstring_with_errors' | bash
-
-      - name: Setup for doc build
-        run: |
-          sudo apt-get update
-          sudo apt install texlive texlive-latex-extra latexmk dvipng
-
-      - name: Build documentation
-        run: |
-          make -C doc html SPHINXOPTS="-nT"
-          make -C doc latexpdf SPHINXOPTS="-nT"
-
-  test-new:
-    runs-on: ${{ matrix.os }}-latest
-    strategy:
-      matrix:
-        os: [Ubuntu]
-        python-version: ["3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
         sphinx-version:
           ["sphinx==4.2", "sphinx==4.5", "sphinx==5.0", "sphinx>=5.0"]
     steps:
@@ -125,13 +60,15 @@ jobs:
         run: |
           make -C doc html SPHINXOPTS="-nT"
           make -C doc latexpdf SPHINXOPTS="-nT"
+
   base:
     runs-on: ${{ matrix.os }}-latest
     strategy:
       matrix:
         os: [ubuntu, macos, windows]
         python-version: ["3.11-dev"]
-        sphinx-version: ["sphinx==4.0", "sphinx==4.5"]
+        sphinx-version:
+          ["sphinx==4.2", "sphinx==4.5", "sphinx==5.0", "sphinx>=5.0"]
     steps:
       - uses: actions/checkout@v3
 
@@ -146,10 +83,6 @@ jobs:
           python -m pip install pytest pytest-cov
           python -m pip install ${{ matrix.sphinx-version }}
           python -m pip list
-
-      - name: Downgrade Jinja2 for sphinx<4
-        if: ${{ matrix.sphinx-version }} == 'sphinx<4.0.2'
-        run: python -m pip install jinja2==3.0.3 markupsafe==2.0.1 pydata-sphinx-theme==0.8.0
 
       - name: Install
         run: |
