--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [Ubuntu]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11-dev"]
         sphinx-version:
           ["sphinx==4.2", "sphinx==4.5", "sphinx==5.0", "sphinx>=5.0"]
     steps:
@@ -60,44 +60,6 @@ jobs:
         run: |
           make -C doc html SPHINXOPTS="-nT"
           make -C doc latexpdf SPHINXOPTS="-nT"
-
-  base:
-    runs-on: ${{ matrix.os }}-latest
-    strategy:
-      matrix:
-        os: [ubuntu, macos, windows]
-        python-version: ["3.11-dev"]
-        sphinx-version:
-          ["sphinx==4.2", "sphinx==4.5", "sphinx==5.0", "sphinx>=5.0"]
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Python setup
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Setup environment
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-          python -m pip install pytest pytest-cov
-          python -m pip install ${{ matrix.sphinx-version }}
-          python -m pip list
-
-      - name: Install
-        run: |
-          python -m pip install .
-          pip list
-
-      - name: Run test suite
-        run: pytest -v --pyargs numpydoc
-
-      - name: Make sure CLI works
-        run: |
-          python -m numpydoc numpydoc.tests.test_main._capture_stdout
-          echo '! python -m numpydoc numpydoc.tests.test_main._invalid_docstring' | bash
-          python -m numpydoc --validate numpydoc.tests.test_main._capture_stdout
-          echo '! python -m numpydoc --validate numpydoc.tests.test_main._docstring_with_errors' | bash
 
   prerelease:
     runs-on: ${{ matrix.os }}-latest
