--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,7 @@ addopts =
     --showlocals --doctest-modules -ra --cov-report= --cov=numpydoc
     --junit-xml=junit-results.xml --ignore=doc/
 junit_family = xunit2
+
+[options.entry_points]
+console_scripts =
+    validate-docstrings = numpydoc.hooks.validate_docstrings:main
