--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         os: [Ubuntu]
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11-dev"]
         sphinx-version:
-          ["sphinx==4.2", "sphinx==4.5", "sphinx==5.0", "sphinx>=5.0", "sphinx>=6.0"]
+          ["sphinx==4.2", "sphinx==4.5", "sphinx==5.0", "sphinx==5.3", "sphinx==6.0", "sphinx>6.0"]
     steps:
       - uses: actions/checkout@v3
 
