--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [Ubuntu]
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
         sphinx-version:
           [
             "sphinx==5.0",
@@ -25,16 +25,6 @@ jobs:
             "sphinx==6.2",
             "sphinx>=7.0",
           ]
-        exclude:
-          - os: Ubuntu
-            python-version: "3.7"
-            sphinx-version: "sphinx==6.0"
-          - os: ubuntu
-            python-version: "3.7"
-            sphinx-version: "sphinx==6.2"
-          - os: ubuntu
-            python-version: "3.7"
-            sphinx-version: "sphinx>=7.0"
     steps:
       - uses: actions/checkout@v3
 
