--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -28,4 +28,7 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-    - requirements: requirements/doc.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - doc
