Add Source to project.urls table

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ file = 'LICENSE.txt'
 
 [project.urls]
 Homepage = 'https://numpydoc.readthedocs.io'
+Source = 'https://github.com/numpy/numpydoc/'
 
 [project.optional-dependencies]
 doc = [
