--- a/tools/pyproject.toml.in
+++ b/tools/pyproject.toml.in
@@ -40,6 +40,7 @@ email = "pav@iki.fi"
 
 [project.urls]
 Homepage = "https://numpydoc.readthedocs.io"
+Source = "https://github.com/numpy/numpydoc/"
 
 [project.optional-dependencies]
 
