Temporary workaround for https://github.com/prettier/prettier/issues/15742

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,7 @@ repos:
     rev: 1bedde25f5cae9b6e8799b161ccc3ab401f421bd  # frozen: v4.0.0-alpha.3
     hooks:
       - id: prettier
+        entry: env PRETTIER_LEGACY_CLI=1 prettier # temporary fix for https://github.com/prettier/prettier/issues/15742
         files: \.(html|md|toml|yml|yaml)
         args: [--prose-wrap=preserve]
 
