--- a/.github/workflows/label-check.yml
+++ b/.github/workflows/label-check.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types:
       - opened
-      - repoened
+      - reopened
       - labeled
       - unlabeled
       - synchronize
