--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,7 @@ updates:
       interval: "monthly"
     labels:
       - "type: Maintenance"
+    groups:
+      actions:
+        patterns:
+          - "*"
