ci(test.yml): Added explicit call to hook tests to see if included in pytest execution

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,6 +49,7 @@ jobs:
       - name: Run test suite
         run: |
           pytest -v --pyargs numpydoc
+          pytest -v --pyargs numpydoc/tests/hooks
 
       - name: Test coverage
         run: |
