--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             python3 -m venv venv
             source venv/bin/activate
             python -m pip install --upgrade pip wheel setuptools
-            python -m pip install --upgrade -r requirements/doc.txt
+            python -m pip install --upgrade --group doc
             python -m pip list
       - save_cache:
           key: pip-cache
