--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Install
         run: |
-          python -m pip install .[test,doc]
+          python -m pip install . --group test --group doc
           pip list
 
       - name: Run test suite
@@ -95,7 +95,7 @@ jobs:
 
       - name: Install
         run: |
-          python -m pip install .[test,doc]
+          python -m pip install . --group test --group doc
           pip list
 
       - name: Run test suite
