ci(test.yml): Added file existance check for hook tests
Workflows do not seem to be running hook pytests.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,6 +99,11 @@ jobs:
           python -m pip install . --pre --group test --group doc
           pip list
 
+      - name: "Check File Existence"
+        uses: thebinaryfelix/check-file-existence-action@v1
+        with:
+          files: numpydoc/tests/hooks/test_validate_hook.py
+
       - name: Run test suite
         run: |
           pytest -v --pyargs numpydoc
