test(test_validate_hook.py): modify test strings and remove unused os.sep replacement
Updates to make this PR compatible with the recent merge from #653

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,8 +48,7 @@ jobs:
 
       - name: Run test suite
         run: |
-          pytest -v --pyargs numpydoc
-          pytest -v --pyargs numpydoc/tests/hooks
+          pytest -v --pyargs .
 
       - name: Test coverage
         run: |
@@ -101,8 +100,7 @@ jobs:
 
       - name: Run test suite
         run: |
-          pytest -v --pyargs numpydoc
-          pytest -v --pyargs numpydoc/tests/hooks
+          pytest -v --pyargs .
 
       - name: Test coverage
         run: |
